# PV_assignments

./: .gitignore  README.md  pyproject.toml
pv_assignments/assignment_1/: part_1.py  part_2.py
pv_assignments/assignment_1/data/: 34552_risoe_1h_irradiance_2024_v2.csv  Assignment 1.xlsx  Spectrum_AM1_5.xlsx  Spectrum_AM1_5_WP0.xlsx  Spectrum_AM1_5_WP0_71.xlsx  Spectrum_AM1_5_WP2.xlsx  Spectrum_AM1_5_WP2_13.xlsx  Spectrum_AM1_5_WP4.xlsx  Spectrum_AM3.xlsx  Spectrum_AM4_5.xlsx  Spectrum_AM6.xlsx  part_1_loader.py  part_2_loader.py
pv_assignments/utils/: panel_irradiation.py
